--- a/css/style.css
+++ b/css/style.css
@@ -76,8 +76,6 @@ footer img{
     color: #1B4965;
 }
 
-/* CART */
-
 /* CARD */
 .card-container{
     display: flex;
@@ -97,7 +95,6 @@ background-color: #bee9e8;
     width: 10em;
     height: 10em;
     object-fit: cover;
-
 }
 .card-body{
     display: flex;
@@ -111,4 +108,77 @@ background-color: #bee9e8;
     text-decoration: none;
     padding: 10px;
     border-radius: 5px;
+}
+
+/* CART */
+.cart{
+    height: 100vh;
+    background-color: #bee9e8;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.text-action{
+    color: #062C44;
+    font-size: 2em;
+    margin-left: 20px;
+}
+#titleCart{
+    color: #062C44;
+    font-size: 5em;
+    display: flex;
+    justify-content: center;
+}
+#cartContainer{
+    display: flex;
+    flex-direction: column;
+}
+.product-cart{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+#actions{
+    display: flex;
+    justify-content: flex-end;
+}
+#deleteCart{
+    margin-right: 1.25em;
+    padding: 0.5em;
+    font-size: 22px;
+    background-color: #1B4965;
+    color: white;
+    border-radius: 5px;
+}
+#totalInCart{
+    font-size: 22px;
+    display: flex;
+    align-items: flex-end;
+    padding-right: 1.875em;
+    margin: 0.625em;
+}
+#buyBtn{
+    margin-right: 1.25em;
+    padding: 0.5em;
+    font-size: 22px;
+    background-color: #1B4965;
+    color: white;
+    border-radius: 5px;
+    width: 100px;
+}
+.cart-img{
+    width: 10em;
+    height: 10em;
+    object-fit: cover;
+}
+.product-price{
+    font-size: 1.25em;
+}
+.product-quantity{
+    font-size: 1.25em;
+}
+.trash-ico{
+    color: #1B4965;
+    height: 3.125em;
 }
